test(zeebe): strengthen assertions to stabilitse zeebe variable creation IT (#4380)